# profiler

./: .clang-tidy  .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README.md  apply_clang_format.sh  appveyor.yml  install_benchmark.sh  install_boost.sh  install_cmake.sh  install_coverage.sh  install_llvm.sh  runmake.py  runmake.sh  sanitize_blacklist.txt  sonar-project.properties  sonar.project  upload_coverage.sh  waitfile.py  wscript
.travis_files/: check_clang_format.sh  check_clang_tidy.sh  install_benchmark.sh  install_cmake.sh  install_coverage.sh  install_llvm.sh  sanitize_blacklist.txt  upload_coverage.sh
Buffer/: Buffer.h  ThreadManager.h
Control/: Manager.cpp  Manager.h  RecordManager.h  Store.h  Thread.cpp  Thread.h  Writer.cpp  Writer.h
Instrumentation/: StatsScope.cpp  StatsScope.h  Time.h
Log/: Log.h
Profiler/: Api.h  Clock.h  Config.h  Decoder.h  Defines.h  Exception.h  Instrumentation.h  Intrinsics.h  Log.h  Rdtsc.h  Serialize.h
Profiler/Algorithm/: FoldLeft.h  FreeMap.h  Mpl.h  Stream.h
Profiler/Config/: Config.cpp  Config.h
Profiler/Control/: Allocation.cpp  Allocation.h  Arena.h  Holder.cpp  Holder.h  Manager.cpp  Manager.h  RecordManager.h  ThreadRecords.h  Writer.cpp  Writer.h
Profiler/Decoder/: Decoder.cpp  Decoder.h
Profiler/Exception/: Exception.h
Profiler/Instrumentation/: ProfilerScope.h  StatsScope.h  Time.h
Profiler/Log/: Log.cpp  Log.h
Profiler/Queue/: Queue.h  TaggedPtr.h
Profiler/Record/: AsyncRecord.h  EventRecord.h  RdtscAsyncRecord.h  RdtscRecordCommon.h  RdtscScopeRecord.h  Record.cpp  Record.h  RecordCommon.h  Records.h  ScopeRecord.h  TimeScopeRecord.h
Profiler/Writer/: FileWriter.h  Processor.h
Queue/: List.h  Queue.cpp  Queue.h
Record/: Record.h
Time/: Time.h
Utilities/: List.h
Utils/: Algorithm.h
examples/: CMakeLists.txt
examples/async1/: Main.cpp
examples/basic1/: Main.cpp
examples/event1/: Main.cpp
examples/scope1/: Main.cpp
profiler/Algorithm/: FoldLeft.h  FreeMap.h
profiler/Algorithms/: BitMask.h  FoldLeft.h  FreeMap.h  Mpl.h
profiler/Config/: Config.cpp  Config.h
profiler/Control/: Allocation.h  Arena.h  Holder.h  Manager.cpp  Manager.h  RecordManager.h  Thread.cpp  Thread.h  ThreadHandling.h  ThreadRecords.h  Writer.cpp  Writer.h
profiler/Exception/: Exception.h
profiler/Instrumentation/: StatsScope.cpp  StatsScope.h  Time.h
profiler/Log/: Log.cpp  Log.h
profiler/Queue/: Queue.h  TaggedPtr.h
profiler/Record/: Record.h
tests/: CMakeLists.txt
tests/Instrumentation/: Benchmark.cpp
tests/Utilities/: Queue.cpp
tests/perf/: Clock.cpp
tests/perf/Control/: Arena.cpp
tests/perf/Instrumentation/: ProfilerScope.cpp  StatsScope.cpp  Time.cpp
tests/perf/Time/: Time.cpp
tests/stress/: Main.cpp
tests/stress/Algorithm/: FreeMap.cpp
tests/stress/Algorithms/: BitMask.cpp  FreeMap.cpp
tests/stress/Arena/: Arena.cpp
tests/stress/Control/: Arena.cpp
tests/stress/Queue/: Queue.cpp
tests/unit/Algorithm/: FreeMap.cpp  Mpl.cpp
tests/unit/Algorithms/: BitMask.cpp  FreeMap.cpp
tests/unit/Control/: Arena.cpp  Writer.cpp
tests/unit/Instrumentation/: ProfilerScope.cpp  StatsScope.cpp
tests/unit/Queue/: Queue.cpp
tests/unit/Utilities/: Queue.cpp
tests/unit/Writer/: Processor.cpp
tools/: chromium_tracing.py  header_deps.py  yaml_to_flame.py
