enable_testing()

find_package(Boost 1.58.0 COMPONENTS unit_test_framework)
include_directories(${Boost_INCLUDE_DIRS})

if (Boost_FOUND)
  file(GLOB unit_tests_src "unit/**/*.cpp" "unit/Main.cpp")
  add_executable(unit_tests ${unit_tests_src})
  target_compile_definitions(unit_tests PRIVATE BOOST_TEST_DYN_LINK)
  target_link_libraries(unit_tests cxxprofiler "-stdlib=libc++" ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${LIBCXX})
  add_test(unit unit_tests)

  file(GLOB stress_tests_src "stress/**/*.cpp" "stress/Main.cpp")
  add_executable(stress_tests ${stress_tests_src})
  target_compile_definitions(stress_tests PRIVATE BOOST_TEST_DYN_LINK)
  target_link_libraries(stress_tests cxxprofiler "-stdlib=libc++" ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${LIBCXX})
  add_test(stress stress_tests)
else ()
  message(STATUS "Boost unit_test_framework not found, unit and performance tests disabled")
endif ()

find_library(Benchmark benchmark)
if (Benchmark)
  include_directories(${Benchmark_INCLUDE_DIRS})
  file(GLOB perf_tests_src "perf/**/*.cpp" "perf/Main.cpp")
  add_executable(perf_tests ${perf_tests_src})
  target_link_libraries(perf_tests cxxprofiler "-stdlib=libc++" ${Benchmark} ${CMAKE_THREAD_LIBS_INIT} ${LIBCXX})
  add_test(perf perf_tests)
else ()
  message(STATUS "Google benchmark not found, performance tests disabled")
endif ()
